--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 	      	<div class="overlay"></div>
 	        <div class="container">
 	          <div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
-	          	<div class="one-third js-fullheight order-md-last img" style="background-image:url(images/background.png);">
+	          	<div class="one-third js-fullheight order-md-last img" style="background-image:url(images/dav-profile-img-bg2.png);">
 	          		<div class="overlay"></div>
 	          	</div>
 		          <div class="one-forth d-flex  align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
@@ -71,7 +71,7 @@
 	      	<div class="overlay"></div>
 	        <div class="container">
 	          <div class="row d-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
-	          	<div class="one-third js-fullheight order-md-last img" style="background-image:url(images/bg_2.png);">
+	          	<div class="one-third js-fullheight order-md-last img" style="background-image:url(images/dav-profile-img-bg1.png);">
 	          		<div class="overlay"></div>
 	          	</div>
 		          <div class="one-forth d-flex align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
@@ -93,8 +93,8 @@
     			<div class="col-md-6 col-lg-5 d-flex">
     				<div class="img-about img d-flex align-items-stretch">
     					<div class="overlay"></div>
-	    				<!-- <div class="img d-flex align-self-stretch align-items-center" style="background-image:url(images/bg_1.png);">
-	    				</div> -->
+	    				<div class="img d-flex align-self-stretch align-items-center" style="background-image:url(images/dav-profile-img-bg2.png);">
+	    				</div>
     				</div>
     			</div>
     			<div class="col-md-6 col-lg-7 pl-lg-5 pb-5">
@@ -102,17 +102,13 @@
 		          <div class="col-md-12 heading-section ftco-animate">
 		          	<h1 class="big">About</h1>
 		            <h2 class="mb-4">About Me</h2>
-		            <p>Bamidele David is a talented and driven Junior software developer who is making waves in the world of web development & design.
-						Bamidele's passion for coding was ignited by his mentor, Abiola Olakunle, a kind and knowledgeable individual who introduced him to the world of technology.
-						Under Abiola's guidance, Bamidele has thrived, expanding his knowledge and pushing the boundaries of his skills. He is immensely grateful for Abiola's mentorship, 
-						which has been instrumental in his growth as a developer. With a vision to become a prominent professional software developer in the world, Bamidele is driven to excel. 
-						He is fueled by the desire to bring more technology to the world and make a positive impact. His mission is to build remarkable websites and applications that people can utilize, 
-						revolutionizing the way they engage with technology. Despite his youth, Bamidele is committed to continuous learning and improvement. 
-						He strives to stay up-to-date with the latest trends and advancements in the field, 
-						always seeking new opportunities to challenge himself and expand his skill set. With his unwavering dedication, exceptional talent, 
-						and the mentorship of Abiola Olakunle, Bamidele is well on his way to achieving his dreams. The future holds great promise for this aspiring software developer as he continues to build and innovate, 
-						leaving an indelible mark on the world of technology.
-					</p>
+		            <p>
+						Bamidele David, a driven Junior software developer mentored by Abiola Olakunle, 
+						is making waves in web development. His passion for coding, ignited by Abiola, 
+						drives him to excel. Bamidele's mission is to create impactful websites and applications,
+						revolutionizing tech engagement. Despite his youth, he's committed to continuous learning 
+						and stays updated with industry trends. With Abiola's mentorship and his own talent, 
+						Bamidele is on track to become a prominent software developer, leaving a lasting mark on the field.</p>
 		            <ul class="about-info mt-4 px-md-0 px-2">
 		            	<li class="d-flex"><span>Name:</span> <span>Bamidele David</span></li>
 		            	<li class="d-flex"><span>Address:</span> <span>Lagos, Nigeria</span></li>
@@ -180,7 +176,7 @@
     		</div>
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="file:///C:/Users/Owner/Downloads/BamideleDavidSmart-Resume.pdf" class="btn btn-primary py-4 px-5">Download CV</a></p>
+    				<p><a href="https://storage.googleapis.com/otta-uploads/candidate-cv/KH1_e_u8Q9UBJZ5NbN_Lisv49OHzPbc-3W_mev3b4Vc.pdf" class="btn btn-primary py-4 px-5" >Download CV</a></p>
     			</div>
     		</div>
     	</div>
@@ -681,7 +677,7 @@
           </div>
 
           <div class="col-md-6 d-flex">
-          	<div class="img" style="background-image: url(images/about.jpg);"></div>
+          	<div class="img" style="background-image: url(images/dav-profile-img-bg1.png);"></div>
           </div>
         </div>
       </div>
