Update Profile URL

--- a/index.html
+++ b/index.html
@@ -692,9 +692,9 @@
               <h2 class="ftco-heading-2">About</h2>
               <p>I'm a software developer who is making waves in the world of web development & design. </p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
-                <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
+                <li class="ftco-animate"><a href="https://twitter.com/iam_david_smart"><span class="icon-twitter"></span></a></li>
                 <li class="ftco-animate"><a href="https://github.com/davidgraphix/"><span class="icon-github"></span></a></li>
-                <li class="ftco-animate"><a href="#"><span class="icon-linkedin"></span></a></li>
+                <li class="ftco-animate"><a href="https://www.linkedin.com/in/bamidele-david-b5b388269/"><span class="icon-linkedin"></span></a></li>
               </ul>
             </div>
           </div>
