--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		          	<div class="text">
 		          		<span class="subheading">Hello!</span>
 			            <h1 class="mb-4 mt-3">I'm <span>David Smart</span></h1>
-			            <h2 class="mb-4">A Software Developer and Graphic Designer</h2>
+			            <h2 class="mb-4">A Software Developer and Graphic Designer.</h2>
 			            <p><a href="#contact-section" class="btn btn-primary py-3 px-4">Hire me</a> <a href="#resume-section" class="btn btn-white btn-outline-white py-3 px-4">My Resume</a></p>
 		            </div>
 		          </div>
@@ -77,7 +77,7 @@
 		          <div class="one-forth d-flex align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
 		          	<div class="text">
 		          		<span class="subheading">Hello!</span>
-			            <h1 class="mb-4 mt-3">I'm a <span>Software developer</span> based in Lagos</h1>
+			            <h1 class="mb-4 mt-3">I'm a <span>Software developer</span> based in Lagos.</h1>
 			            <p><a href="#contact-section" class="btn btn-primary py-3 px-4">Contact me</a> <a href="#projects-section" class="btn btn-white btn-outline-white py-3 px-4">My Projects</a></p>
 		            </div>
 		          </div>
@@ -102,13 +102,16 @@
 		          <div class="col-md-12 heading-section ftco-animate">
 		          	<h1 class="big">About</h1>
 		            <h2 class="mb-4">About Me</h2>
-		            <p>
-						Bamidele David, a driven Junior software developer mentored by Abiola Olakunle, 
-						is making waves in web development. His passion for coding, ignited by Abiola, 
-						drives him to excel. Bamidele's mission is to create impactful websites and applications,
-						revolutionizing tech engagement. Despite his youth, he's committed to continuous learning 
-						and stays updated with industry trends. With Abiola's mentorship and his own talent, 
-						Bamidele is on track to become a prominent software developer, leaving a lasting mark on the field.</p>
+		            <p id="my-about">
+						Bamidele David, a driven software developer mentored by Abiola Olakunle, 
+						is making waves in web development. His passion for coding, ignited by AbiolaSoft, 
+						drives him to excel. <a href="" id="see-more">See more...</a></p>
+						<p id="full-about" style="display: none;">Bamidele David, a driven software developer mentored by Abiola Olakunle, 
+							is making waves in web development. His passion for coding, ignited by AbiolaSoft, 
+							drives him to excel. Bamidele's mission is to create impactful websites and applications,
+							revolutionizing tech engagement. Despite his youth, he's committed to continuous learning 
+							and stays updated with industry trends. With AbiolaSoft's mentorship and his own talent, 
+							Bamidele is on track to become a prominent software developer, leaving a lasting mark on the field. <a href="" id="show-less">Show less</a></p>
 		            <ul class="about-info mt-4 px-md-0 px-2">
 		            	<li class="d-flex"><span>Name:</span> <span>Bamidele David</span></li>
 		            	<li class="d-flex"><span>Address:</span> <span>Lagos, Nigeria</span></li>
@@ -193,7 +196,7 @@
         </div>
     		<div class="row">
 					<div class="col-md-4 text-center d-flex ftco-animate">
-						<a href="#" class="services-1">
+						<a href="" class="services-1">
 							<span class="icon">
 								<i class="flaticon-analysis"></i>
 							</span>
@@ -203,7 +206,7 @@
 						</a>
 					</div>
 					<div class="col-md-4 text-center d-flex ftco-animate">
-						<a href="#" class="services-1">
+						<a href="" class="services-1">
 							<span class="icon">
 								<i class="flaticon-flasks"></i>
 							</span>
@@ -213,7 +216,7 @@
 						</a>
 					</div>
 					<div class="col-md-4 text-center d-flex ftco-animate">
-						<a href="#" class="services-1">
+						<a href="" class="services-1">
 							<span class="icon">
 								<i class="flaticon-ideas"></i>
 							</span>
@@ -224,7 +227,7 @@
 					</div>
 
 					<div class="col-md-4 text-center d-flex ftco-animate">
-						<a href="#" class="services-1">
+						<a href="" class="services-1">
 							<span class="icon">
 								<i class="flaticon-analysis"></i>
 							</span>
@@ -234,7 +237,7 @@
 						</a>
 					</div>
 					<div class="col-md-4 text-center d-flex ftco-animate">
-						<a href="#" class="services-1">
+						<a href="" class="services-1">
 							<span class="icon">
 								<i class="flaticon-flasks"></i>
 							</span>
@@ -244,7 +247,7 @@
 						</a>
 					</div>
 					<div class="col-md-4 text-center d-flex ftco-animate">
-						<a href="#" class="services-1">
+						<a href="" class="services-1">
 							<span class="icon">
 								<i class="flaticon-ideas"></i>
 							</span>
@@ -714,11 +717,11 @@
              <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">Services</h2>
               <ul class="list-unstyled">
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Web Development</a></li>
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>API Development</a></li>
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Database Management</a></li>
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Performance Optimization</a></li>
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>DevOps and Support</a></li>
+                <li><a href=""><span class="icon-long-arrow-right mr-2"></span>Web Development</a></li>
+                <li><a href=""><span class="icon-long-arrow-right mr-2"></span>API Development</a></li>
+                <li><a href=""><span class="icon-long-arrow-right mr-2"></span>Database Management</a></li>
+                <li><a href=""><span class="icon-long-arrow-right mr-2"></span>Performance Optimization</a></li>
+                <li><a href=""><span class="icon-long-arrow-right mr-2"></span>DevOps and Support</a></li>
               </ul>
             </div>
           </div>
@@ -739,7 +742,7 @@
           <div class="col-md-12 text-center">
 
             <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> David Smart Soft.</a>
+  Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made and developed by <span>David Smart Soft</span>.
   <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
           </div>
         </div>
