--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		          	<div class="text">
 		          		<span class="subheading">Hello!</span>
 			            <h1 class="mb-4 mt-3">I'm <span>David Smart</span></h1>
-			            <h2 class="mb-4">A Software Developer and Graphic Designer.</h2>
+			            <h2 class="mb-4">A Software Developer.</h2>
 			            <p><a href="#contact-section" class="btn btn-primary py-3 px-4">Hire me</a> <a href="#resume-section" class="btn btn-white btn-outline-white py-3 px-4">My Resume</a></p>
 		            </div>
 		          </div>
@@ -77,7 +77,7 @@
 		          <div class="one-forth d-flex align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
 		          	<div class="text">
 		          		<span class="subheading">Hello!</span>
-			            <h1 class="mb-4 mt-3">I'm a <span>Software developer</span> based in Lagos.</h1>
+			            <h1 class="mb-4 mt-3">I'm a <span>Software engeneer</span> based in Lagos.</h1>
 			            <p><a href="#contact-section" class="btn btn-primary py-3 px-4">Contact me</a> <a href="#projects-section" class="btn btn-white btn-outline-white py-3 px-4">My Projects</a></p>
 		            </div>
 		          </div>
@@ -103,15 +103,21 @@
 		          	<h1 class="big">About</h1>
 		            <h2 class="mb-4">About Me</h2>
 		            <p id="my-about">
-						Bamidele David, a driven software developer mentored by Abiola Olakunle, 
-						is making waves in web development. His passion for coding, ignited by AbiolaSoft, 
-						drives him to excel. <a href="" id="see-more">See more...</a></p>
-						<p id="full-about" style="display: none;">Bamidele David, a driven software developer mentored by Abiola Olakunle, 
-							is making waves in web development. His passion for coding, ignited by AbiolaSoft, 
-							drives him to excel. Bamidele's mission is to create impactful websites and applications,
-							revolutionizing tech engagement. Despite his youth, he's committed to continuous learning 
-							and stays updated with industry trends. With AbiolaSoft's mentorship and his own talent, 
-							Bamidele is on track to become a prominent software developer, leaving a lasting mark on the field. <a href="" id="show-less">Show less</a></p>
+						My name is David Bamidele.
+						I am a full-stack software engineer with over 3 years of experience, 
+						focusing on building enterprise frontend and backend applications with React and ASP.Net.<a href="" id="see-more">See more...</a></p>
+						<p id="full-about" style="display: none;">My name is David Bamidele.
+							I am a full-stack software engineer with over 3 years of experience, 
+							focusing on building enterprise frontend and backend applications with React and ASP.Net. 
+							From a young age, I've been fascinated by the endless possibillities that coding offers, 
+							and I've dedicated myself to mastering various programming languages and development tools. 
+							I am fortunate to be under the mentorship of Olakunle Abiola, a seasoned Senior software engineer 
+							with years of professional experience . Under his guidance, I've had the privilege of honing my skills and 
+							gaining invaluable insights into the world of enterprise software development. <br>
+							What distinguishes me is not just my technical prowess, but also my insatiable thrist for knowledge and innovation. 
+							I possess strong problem-solving abilities and a meticulous attention to detail. I approach every project with a blend of 
+							creativity and analytical thinking, always striving to deliver solutions that not only meet but exceed expectations. <br>
+							I'm eager to embark on new challenges, push the boundaries of technology, and make a meaningful impact on the world around me. <a href="" id="show-less">Show less</a></p>
 		            <ul class="about-info mt-4 px-md-0 px-2">
 		            	<li class="d-flex"><span>Name:</span> <span>Bamidele David</span></li>
 		            	<li class="d-flex"><span>Address:</span> <span>Lagos, Nigeria</span></li>
@@ -140,14 +146,32 @@
           <div class="col-md-10 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Resume</h1>
             <h2 class="mb-4">Resume</h2>
-            <p>Fullstack Engineer, Frontend Engineer & Software Engineering Intern.</p>
+            <p>I embrace the endless pursuit of knowledge, blend creativity with precision, and exceed expectations with every endeavor.</p>
           </div>
         </div>
     		<div class="row">
-    			<div class="col-md-6">
-    				<div class="resume-wrap ftco-animate">
+				<div class="col-md-6">
+					<div class="resume-wrap ftco-animate">
     					<span class="date">2023 - Till Date</span>
     					<h2>Fullstack Engineer</h2>
+						<div>
+							<span class="position">AbiolaSoft</span> 
+						</div>
+    					<p class="mt-4">
+							• Web Development | React | C# | Asp .Net. <br>
+							• Developed reusable React components, increasing the flexibility and scalability of financial applications. <br>
+							• Implemented Redux for efficient state management and consistent data flow. <br>
+							• Utilized React Router to enhance navigation and provide dynamic route handling. <br>
+							• Integrated RESTful APIs and GraphQL endpoints to display real-time financial data. <br>
+							• Conducted performance optimizations, resulting in a 30% improvement in application responsiveness. <br>
+							• Collaborated with UX/UI designers to implement responsive designs and interactive interfaces.
+							</p>
+    				</div>
+    			</div>
+    			<div class="col-md-6">
+    				<div class="resume-wrap ftco-animate">
+    					<span class="date">2022-2023</span>
+    					<h2>Frontend Engineer.</h2>
     					<span class="position">AbiolaSoft</span>
     					<p class="mt-4">Web Development | React | C# | Typescript | JavaScript | Bootstrap | HTML | CSS.
  						</p>
@@ -160,26 +184,11 @@
     				</div>
     			</div>
 
-    			<div class="col-md-6">
-					<div class="resume-wrap ftco-animate">
-    					<span class="date">2022-2023</span>
-    					<h2>Frontend Engineer.</h2>
-						<div>
-							<span class="position">AbiolaSoft</span> 
-						</div>
-    					<p class="mt-4">
-							• Developed reusable React components, increasing the flexibility and scalability of financial applications. <br>
-							• Implemented Redux for efficient state management and consistent data flow. <br>
-							• Utilized React Router to enhance navigation and provide dynamic route handling. <br>
-							• Integrated RESTful APIs and GraphQL endpoints to display real-time financial data. <br>
-							• Conducted performance optimizations, resulting in a 30% improvement in application responsiveness. <br>
-							• Collaborated with UX/UI designers to implement responsive designs and interactive interfaces.
-							</p>
-    				</div>
     		</div>
+
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="https://storage.googleapis.com/otta-uploads/candidate-cv/KH1_e_u8Q9UBJZ5NbN_Lisv49OHzPbc-3W_mev3b4Vc.pdf" class="btn btn-primary py-4 px-5" >Download CV</a></p>
+    				<p><a target="_blank" href="https://storage.googleapis.com/otta-uploads/candidate-cv/KH1_e_u8Q9UBJZ5NbN_Lisv49OHzPbc-3W_mev3b4Vc.pdf" class="btn btn-primary py-4 px-5" >Download CV</a></p>
     			</div>
     		</div>
     	</div>
@@ -267,7 +276,7 @@
           <div class="col-md-12 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Skills</h1>
             <h2 class="mb-4">My Skills</h2>
-            <p>Programming Languages | Graphic Design</p>
+            <p>Programming Languages & tools</p>
           </div>
         </div>
 				<div class="row">
@@ -431,59 +440,70 @@
         </div>
     		<div class="row">
 				<div class="col-md-8">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/abiolasoft-finance-app-img-prv.png);">
+					<a target="_blank" href="https://thefincore.com/">
+						<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/abiolasoft-finance-app-img-prv.png);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
-	    					<h3><a href="https://thefincore.com/">AbiolaSoft Finance web App</a></h3>
+	    					<h3>AbiolaSoft Finance web App</h3>
 	    					<span>Business Finance App</span>
 	    				</div>
     				</div>
+				</a>
   				</div>
     			<div class="col-md-4">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/dav-weather-app-img-prv.png);">
-    					<div class="overlay"></div>
-	    				<div class="text text-center p-4">
-	    					<h3><a href="https://davidgraphix.github.io/Weather-Apps/">Weather App</a></h3>
-	    					<span>Weather</span>
-	    				</div>
-    				</div>
+					<a target="_blank" href="https://davidgraphix.github.io/Weather-Apps/">
+						<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/dav-weather-app-img-prv.png);">
+							<div class="overlay"></div>
+							<div class="text text-center p-4">
+								<h3>Weather App</h3>
+								<span>Weather</span>
+							</div>
+						</div>
+					</a>
   				</div>
     			<div class="col-md-8">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/dav-quizapp-img-prv.png);">
-    					<div class="overlay"></div>
-	    				<div class="text text-center p-4">
-	    					<h3><a href="https://davidgraphix.github.io/smart-quiz-app/">JavaScript Quiz App</a></h3>
-	    					<span>Quiz</span>
-	    				</div>
-    				</div>
+					<a target="_blank" href="https://davidgraphix.github.io/smart-quiz-app/">
+						<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/dav-quizapp-img-prv.png);">
+							<div class="overlay"></div>
+							<div class="text text-center p-4">
+								<h3>JavaScript Quiz App</h3>
+								<span>Quiz</span>
+							</div>
+						</div>
+					</a>
 
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/dav-webpage-design-img-prv.png);">
+					<a target="_blank" href="https://davidgraphix.github.io/webpage-Design/">
+						<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/dav-webpage-design-img-prv.png);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
-							<h3><a href="https://davidgraphix.github.io/webpage-Design/">Webpage Design</a></h3>
-			    					<span>Web Design</span>
+							<h3>Webpage Design</h3>
+			    			<span>Web Design</span>
 	    				</div>
-    				</div>
+    				</div></a>
+    				
     			</div>
     			<div class="col-md-4">
     				<div class="row">
     					<div class="col-md-12">
-		    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/dav-todo-list-prv-img.png);">
+							<a target="_blank" href="https://davidgraphix.github.io/Smart-todo-list-app/">
+								<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/dav-todo-list-prv-img.png);">
 		    					<div class="overlay"></div>
 			    				<div class="text text-center p-4">
-									<h3><a href="https://davidgraphix.github.io/Smart-todo-list-app/">To-do List App</a></h3>
+									<h3>To-do List App</h3>
 			    					<span>To-do List</span>
 			    				</div>
-		    				</div>
+		    				</div></a>
 	    				</div>
 	    				<div class="col-md-12">
-		    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/dav-calculator-img-prv.png);">
-		    					<div class="overlay"></div>
-			    				<div class="text text-center p-4">
-			    					<h3><a href="https://davidgraphix.github.io/david-smart-calculator-website/">Web Calculator</a></h3>
-	    					<span>Calculator</span>
-			    				</div>
-		    				</div>
+							<a target="_blank" href="https://davidgraphix.github.io/david-smart-calculator-website/">
+								<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/dav-calculator-img-prv.png);">
+									<div class="overlay"></div>
+									<div class="text text-center p-4">
+										<h3>Web Calculator</h3>
+								<span>Calculator</span>
+									</div>
+								</div>
+							</a>
 	    				</div>
     				</div>
     			</div>
@@ -657,7 +677,7 @@
           </div>
         </div>
 
-        <div class="row no-gutters block-9">
+        <!-- <div class="row no-gutters block-9">
           <div class="col-md-6 order-md-last d-flex">
             <form action="#" class="bg-light p-4 p-md-5 contact-form">
               <div class="form-group">
@@ -682,7 +702,7 @@
           <div class="col-md-6 d-flex">
           	<div class="img" style="background-image: url(images/dav-profile-img-bg1.png);"></div>
           </div>
-        </div>
+        </div> -->
       </div>
     </section>
 		
@@ -695,9 +715,9 @@
               <h2 class="ftco-heading-2">About</h2>
               <p>I'm a software developer who is making waves in the world of web development & design. </p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
-                <li class="ftco-animate"><a href="https://twitter.com/iam_david_smart"><span class="icon-twitter"></span></a></li>
-                <li class="ftco-animate"><a href="https://github.com/davidgraphix/"><span class="icon-github"></span></a></li>
-                <li class="ftco-animate"><a href="https://www.linkedin.com/in/bamidele-david-b5b388269/"><span class="icon-linkedin"></span></a></li>
+                <li class="ftco-animate"><a target="_blank" href="https://twitter.com/iam_david_smart"><span class="icon-twitter"></span></a></li>
+                <li class="ftco-animate"><a target="_blank" href="https://github.com/davidgraphix/"><span class="icon-github"></span></a></li>
+                <li class="ftco-animate"><a target="_blank" href="https://www.linkedin.com/in/bamidele-david-b5b388269/"><span class="icon-linkedin"></span></a></li>
               </ul>
             </div>
           </div>
@@ -730,9 +750,9 @@
             	<h2 class="ftco-heading-2">Have a Questions?</h2>
             	<div class="block-23 mb-3">
 	              <ul>
-	                <li><a href="https://wa.me/+2349035177568/"><span class="icon icon-whatsapp"></span><span class="text">Click here</span></li>
-	                <li><a href="tel://+2349035177568"><span class="icon icon-phone"></span><span class="text">Click here</span></a></li>
-	                <li><a href="mailto:bamideledavidsmart40@gmail.com"><span class="icon icon-envelope"></span><span class="text">Click here</span></a></li>
+	                <li><a href="https://wa.me/+2349035177568/"><span class="icon icon-whatsapp"></span><span class="text">WhatsApp</span></li>
+	                <li><a href="tel://+2349035177568"><span class="icon icon-phone"></span><span class="text">Phone</span></a></li>
+	                <li><a href="mailto:bamideledavidsmart40@gmail.com"><span class="icon icon-envelope"></span><span class="text">Email</span></a></li>
 	              </ul>
 	            </div>
             </div>
